--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "mongodb": "^5.3.0"
   },
   "scripts": {
-    "start": "npm node ./src/app.js",
-    "dev": "npx nodemon ./src/app.js"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
