--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/app.js",
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongodb": "^5.3.0"
   },
   "scripts": {
