--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "node ./src/app.js",
