--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
